# rust-grep

./: CLAUDE.md  Cargo.toml  Dioxus.toml  rust-grep-prompts.md
.github/workflows/: release.yml
assets/: main.css
src/: app.rs  editor.rs  export.rs  history.rs  main.rs  settings.rs  state.rs
src/components/: flat_view.rs  highlight.rs  mod.rs  options_bar.rs  result_panel.rs  status_bar.rs  toast.rs  toolbar.rs  tree_view.rs  virtual_list.rs
src/search/: engine.rs  matcher.rs  mod.rs  search_engine.rs  walker.rs
